Rest tests to work and test them on GA